test/bad/arrays/comprehension10.px

[for x in [0] if true, 1 yield x]
